<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>mtsa</groupId>
    <artifactId>mtsa</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>


    <profiles>
        <profile>
            <id>usersRun</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <noLogging>OFF</noLogging> <!--set log ON if you want to see console debug-->
                <fork.number>4</fork.number>
                <thread.count>4</thread.count>
                <env.maxmem></env.maxmem>
            </properties>
        </profile>
        <profile>
            <id>serverBranchConfig</id>
            <activation>
                <property>
                    <name>env</name>
                    <value>server</value>
                </property>
            </activation>
            <properties>
                <env.maxmem>4096m</env.maxmem>
                <fork.number>1</fork.number>
                <thread.count>8</thread.count>
                <noLogging>OFF</noLogging>
            </properties>
        </profile>
    </profiles>


    <build>
        <testSourceDirectory>src/test/java/</testSourceDirectory>
        <plugins>


            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5</version>
                <configuration>
                    <fork>true</fork>
                    <!--<meminitial>1024m</meminitial>-->
                    <maxmem>${env.maxmem}</maxmem>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <!--<plugin>-->
                <!--<groupId>org.apache.maven.plugins</groupId>-->
                <!--<artifactId>maven-jar-plugin</artifactId>-->
                <!--<version>2.5</version>-->
                <!--<configuration>-->
                    <!--<archive>-->
                        <!--<manifest>-->
                            <!--<addClasspath>true</addClasspath>-->
                            <!--<mainClass>HPWindow</mainClass>-->
                        <!--</manifest>-->
                    <!--</archive>-->
                <!--</configuration>-->
            <!--</plugin>-->

            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.21.0</version>
                <configuration>
                    <argLine>-Dlog4j.configuration=${noLogging} @{argLine} </argLine>
                    <properties>
                        <property>
                            <name>junit</name>
                            <value>false</value>
                        </property>
                    </properties>
                    <forkCount>${fork.number}</forkCount>
                    <reuseForks>false</reuseForks>
                    <forkedProcessExitTimeoutInSeconds>30</forkedProcessExitTimeoutInSeconds>
                    <parallel>methods</parallel>
                    <threadCount>${thread.count}</threadCount>

                    <!-- <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->

                    <!--<excludedGroups>MTSA.SlowTests</excludedGroups>-->

                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-junit4</artifactId>
                        <version>2.20.1</version>
                    </dependency>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-testng</artifactId>
                        <version>2.20.1</version>
                    </dependency>
                </dependencies>
            </plugin>
            <!--<plugin>-->
                <!--<groupId>org.codehaus.mojo</groupId>-->
                <!--<artifactId>exec-maven-plugin</artifactId>-->
                <!--<version>1.6.0</version>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<goals>-->
                            <!--<goal>java</goal>-->
                        <!--</goals>-->
                    <!--</execution>-->
                <!--</executions>-->
                <!--<configuration>-->
                    <!--<mainClass>ltsa.ui.HPWindow</mainClass>-->
                <!--</configuration>-->
            <!--</plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>


                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>ltsa.ui.HPWindow</mainClass>
                                    <!--<class-path>lib/**</class-path>-->
                                </transformer>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                    <resource>META-INF/spring.handlers</resource>
                                </transformer>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                    <resource>META-INF/spring.schemas</resource>
                                </transformer>

                            </transformers>
                            <!--<filters>-->
                            <!--<filter>-->
                            <!--<artifact>*:*</artifact>-->
                            <!--<excludes>-->
                            <!--<exclude>META-INF/*.SF</exclude>-->
                            <!--<exclude>META-INF/*.DSA</exclude>-->
                            <!--<exclude>META-INF/*.RSA</exclude>-->
                            <!--</excludes>-->
                            <!--</filter>-->
                            <!--</filters>-->
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.7</version>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <!-- attached to Maven test phase -->
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <skipTests>true</skipTests>
                    <systemPropertyVariables>
                        <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>10</source>
                    <target>10</target>
                </configuration>
            </plugin>

        </plugins>
    </build>
    <repositories>

        <repository>
            <id>lib</id>
            <url>file://${project.basedir}/lib</url>
        </repository>
        <repository>
            <id>freehep-releases</id>
            <url>https://java.freehep.org/maven2/</url>
        </repository>
    </repositories>

    <dependencies>
        <!--<dependency>-->
            <!--<groupId>org.apache.maven</groupId>-->
            <!--<artifactId>maven-archiver</artifactId>-->
            <!--<version>3.2.0</version>-->
        <!--</dependency>-->

        <dependency>
            <groupId>org.gnu</groupId>
            <artifactId>jel</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
            <version>3.2</version>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.2</version>
        </dependency>
        <dependency>
            <groupId>net.sf.jung</groupId>
            <artifactId>jung-graph-impl</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
        </dependency>
        <dependency>
            <groupId>com.sun.org.apache</groupId>
            <artifactId>jaxp-ri</artifactId>
            <version>1.4</version>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>
        <dependency>
            <groupId>com.google.zxing</groupId>
            <artifactId>javase</artifactId>
            <version>2.2</version>
        </dependency>
        <dependency>
            <groupId>com.illposed.osc</groupId>
            <artifactId>javaosc-core</artifactId>
            <version>0.2</version>
        </dependency>
        <dependency>
            <groupId>org.scream3r</groupId>
            <artifactId>jssc</artifactId>
            <version>2.8.0</version>
        </dependency>
        <dependency>
            <groupId>jfree</groupId>
            <artifactId>jcommon</artifactId>
            <version>1.0.16</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>12.0.1</version>
        </dependency>
        <dependency>
            <groupId>net.sf.jung</groupId>
            <artifactId>jung-algorithms</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>net.sf.jung</groupId>
            <artifactId>jung-visualization</artifactId>
            <version>2.0.1</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-beans</artifactId>
            <version>4.3.10.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>4.3.10.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>4.3.10.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-expression</artifactId>
            <version>4.3.10.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>com.jgoodies</groupId>
            <artifactId>forms</artifactId>
            <version>1.2.1</version>
        </dependency>
        <dependency>
            <groupId>org.freehep</groupId>
            <artifactId>freehep-graphics2d</artifactId>
            <version>2.4</version>
        </dependency>
        <dependency>
            <groupId>org.freehep</groupId>
            <artifactId>freehep-graphicsio-pdf</artifactId>
            <version>2.4</version>
        </dependency>
        <dependency>
            <groupId>org.freehep</groupId>
            <artifactId>freehep-graphicsio-ps</artifactId>
            <version>2.4</version>
        </dependency>
        <dependency>
            <groupId>org.freehep</groupId>
            <artifactId>freehep-graphicsio-svg</artifactId>
            <version>2.4</version>
        </dependency>
        <dependency>
            <groupId>jfree</groupId>
            <artifactId>jfreechart</artifactId>
            <version>1.0.13</version>
        </dependency>
        <dependency>
            <groupId>org.bytedeco</groupId>
            <artifactId>javacv</artifactId>
            <version>1.4.2</version>
        </dependency>
        <!-- ここから -->
        <dependency>
            <groupId>org.bytedeco.javacpp-presets</groupId>
            <artifactId>opencv-platform</artifactId>
            <version>3.4.2-1.4.2</version>
        </dependency>
        <dependency>
            <groupId>org.bytedeco.javacpp-presets</groupId>
            <artifactId>ffmpeg-platform</artifactId>
            <version>4.0.1-1.4.2</version>
        </dependency>
        <!-- ここまで -->
        <dependency>
            <groupId>net.java.dev.swing-layout</groupId>
            <artifactId>swing-layout</artifactId>
            <version>1.0.2</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.javacpp</groupId>
            <artifactId>javacpp</artifactId>
            <version>0.7</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.11</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-io</artifactId>
            <version>1.3.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-report-plugin</artifactId>
            <version>2.20.1</version>
        </dependency>

        <!-- Local dependencies   -->
        <dependency>
            <groupId>jadrone</groupId>
            <artifactId>jadrone</artifactId>
            <version>0.32</version>
        </dependency>
        <dependency>
            <groupId>pccomm</groupId>
            <artifactId>pccomm</artifactId>
            <version>0.1</version>
        </dependency>
        <dependency>
            <groupId>jgraphx</groupId>
            <artifactId>jgraphx</artifactId>
            <version>0.1</version>
        </dependency>
        <dependency>
            <groupId>com.microsoft</groupId>
            <artifactId>z3</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>synoptic</groupId>
            <artifactId>synoptic</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>jargs</groupId>
            <artifactId>jargs</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>javacv</groupId>
            <artifactId>javacv</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>lejos</groupId>
            <artifactId>nxt</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>ev3classes</groupId>
            <artifactId>ev3classes</artifactId>
            <version>0.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
        <!--<dependency>-->
            <!--<groupId>org.apache.maven.plugins</groupId>-->
            <!--<artifactId>maven-compiler-plugin</artifactId>-->
            <!--<version>3.5</version>-->
        <!--</dependency>-->
        <dependency>
            <groupId>uk.ac.ic</groupId>
            <artifactId>SceneBeans</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>de.devoxx4kids</groupId>
            <artifactId>dronecontroller</artifactId>
            <version>0.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.openpnp</groupId>
            <artifactId>opencv</artifactId>
            <version>3.2.0-1</version>
        </dependency>
        <dependency>
            <groupId>com.microsoft.onnxruntime</groupId>
            <artifactId>onnxruntime</artifactId>
            <version>1.10.0</version>
        </dependency>
    </dependencies>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>2.21.0</version>
                <configuration>
                    <showSuccess>false</showSuccess>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

</project>
